--- a/index.css
+++ b/index.css
@@ -4,87 +4,12 @@
   box-sizing: border-box;
   user-select: none;
 }
-/* canvas canvas canvas canvas canvas */
 
-/* .all-body-canvas{
- width: 100%;
-} */
  #body{
   overflow-x: hidden;
   overflow-y: hidden;
  }
- .all-in-all{
-  /* height: 10rem; */
-  /* height: 48rem; */
-   /* overflow-x: hidden;
-  overflow-y: hidden; */
- }
 
-
-
- /* .canvas-canvas{
-  background-color: rgb(0, 0, 0); 
-  margin-left: 4rem; 
-  margin-top: 4rem;
-  border-radius: 7px;
-  height: 65rem;
- }
- .fa-share{
-  position: absolute;
-  left: 33.5rem;
-  bottom: 1rem;
- }
- .fa-download{
-  position: relative;
-  left: 33.5rem;
-  top: 3.5rem;
- }
- .fa-thumbs-up{
-  position: absolute;
-  left: 33.4rem;
-  bottom: 13.2rem;
- }
- .fa-thumbs-down{
-  position: absolute;
-  left: 33.3rem;
-  bottom: 9rem;
- }
- .fa-comment{
-  position: absolute;
-  left: 33.5rem;
-  bottom: 5rem;
- 
- }
- .fa-gear{
-  position: absolute;
-  left: 33.4rem;
-  bottom: 25.5rem;
- }
- .canvas-icons{
-  position: absolute;
-  left: 49.5rem;
-  top: 27rem;
-  padding-top: 2rem;
-   display: block;
-   font-size: 22px;
-}
-.canvas-play{
-  position: absolute;
-  top: 53rem;
-  left: 4rem;
-  padding:0.3px;
-}
-.voll{
- position: relative;
- left: -1rem;
- bottom: 155px;
- width: 860%;
-}
-.vol{
-  position: relative;
-  left: -40px;
-  bottom: 133px;
- } */
 
 
 
@@ -174,12 +99,7 @@ body{
    background-color:whitesmoke;
   }
 
-  /* .all{
-   position: fixed;
-   left: 0px;
-   right: 0px;
-   top: 0px;
-  } */
+ 
   a{
     display: none;
     color: white;
@@ -204,8 +124,8 @@ body{
       border: 1px solid black;
       border-radius: 50%;
       position: absolute;
-      right: 24.5rem;
-      top: 1.1rem;
+      right: 18rem;
+      top: 0.79rem;
       background-color: white;
       color: black;
       padding: 2px;
@@ -307,7 +227,7 @@ a{
 }
   .all-nav{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: rgb(243, 243, 243);
     height: 100px;
@@ -324,7 +244,7 @@ a{
     height: 3rem;
     border-radius: 50%;
     position: absolute;
-    right:81rem;
+    right:80rem;
     top: 1px;
   }
   .pineapple-navbar{
@@ -470,24 +390,17 @@ width:3.5rem;
   align-items: center;
   list-style: none;
 }
+.ol > * {
+ margin-left: 20px;
+ margin-right:0px;
+}
 .a{
   text-decoration: none;
   font-size: var(--FS);
   text-transform: capitalize;
   color: black;
-  margin: 1rem;
   position: relative;
-  left: 3rem;
 }
-/* .fast-b{
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-} */
-/* .fast-b:hover{
-  transform:scale(150%);
-} */
-
 
 #main{
   margin-top: 7rem;
@@ -501,23 +414,9 @@ width:3.5rem;
   width:fit-content;
 position: absolute;
 }
-/* .button{
-  position: relative;
-  left: 5rem;
-  width: 5rem;
-  text-transform: uppercase;
-  font-size:var(--FS);
-  margin-bottom: 1rem;
-  background-color: rgba(171, 80, 168, 0.851); 
-} */
-/* body{
-   background-color: rgb(158, 178, 123);
- width: 100%;
-} */
-
 
 .see{
- /* background-color:  rgb(236, 175, 236);  */
+
   width: 38.9vh;
   height: auto;
   word-wrap: break-word;
@@ -525,7 +424,7 @@ position: absolute;
   left: 1rem;
   border-radius: 1rem 1rem 1rem 1rem;
   box-shadow: 0.03px 1px 1px 1px rgb(131, 131, 131);
-  /* box-shadow: 4px 2px 6px grey; */
+
 }
 
 .baby{
@@ -535,12 +434,7 @@ position: absolute;
   display: block;
 }
 
-/* select:hover{
-  display: none;
-}
-.baby:hover{
-  display: block;
-} */
+
 .mr{
   text-transform: capitalize;
   font-weight: bolder;
@@ -550,37 +444,24 @@ position: absolute;
 #mind{
 display: flex;
 }
-/* h5{
-  text-align: center;
-  font-size: 2rem;
-  text-transform:uppercase;
-} */
+
 .see:hover{
   transform:scale(99%);
 border-radius: 1rem 1rem 1rem 1rem;
 box-shadow: 0.03px 1px 1px 1px rgb(131, 131, 131);
-/* box-shadow: 4px 2px  6px grey; */
+
 }
  .miss{
   width: 39vh;
   height: 45vh;
   border-radius: 1rem 1rem 0rem 0rem;
  }
-/* PRAICES */
-/* .button{
-  font-size: 1rem;
-  position: relative;
-  left: 1px;
-} */
+
 #first{
   background-color: rgb(81, 240, 81);
   width: 7.1rem;
   
 }
-/* #second{
-  background-color: rgb(90, 90, 227);
-  width: 7.3rem;
-} */
 
 p{
    position: relative;
@@ -595,22 +476,7 @@ p{
   font-size: var(--FZ);
   font-weight: bolder;
 }
-/* .second{
-  position: relative;
-  top: -5rem;
-  left: 10.8rem;
-  font-size:var(--FZ);
-  font-weight: bolder;
-} */
-/* h6{
-  position: relative;
-  top: -3rem;
-  left: 11.3rem;
-  font-size: var(--FZ);
-}  */
-/* .thousand,h6,.second{
-color: rgb(255, 0, 0);
-} */
+
 .first{
   position: relative;
   top: -5rem;
@@ -648,7 +514,7 @@ color: rgb(255, 0, 0);
   display: flex;
   justify-content: center;
   background-color: rgb(243, 243, 243);
-  /* background-color: papayawhip; */
+
   height: 10rem;
   border-bottom: 2px solid black;
 }
@@ -875,7 +741,7 @@ overflow: hidden;
   color:black;
   position: relative;
   top: -0.1rem;
-  left: 2.8rem;
+ margin-right: 12px;
   padding: 3px;
 }
 .tald{
